# tripleo-quickstart-extras

./: .ansible-lint  .gitignore  .gitreview  .pre-commit-config.yaml  .yamllint  README.md  README.rst  bindep.txt  cleanup-destructive.yml  constraints.txt  doc-requirements.txt  molecule-requirements.txt  other-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt  test.yaml  tox.ini  vars
ci-scripts/: ansible-lint.sh  validate_jinja2.py
configs/: centosci-logs.yml  scale_compute.yml
defaults/: main.yml
doc/: requirements.txt  upgrade.rst
handlers/: main.yml
meta/: main.yml
playbooks/: baremetal-full-deploy.yml  baremetal-full-freeipa.yml  baremetal-full-overcloud-prep.yml  baremetal-full-overcloud-validate.yml  baremetal-full-overcloud.yml  baremetal-full-undercloud.yml  baremetal-prep-virthost.yml  baremetal-quickstart-extras.yml  baremetal-undercloud-minimal.yml  baremetal-undercloud-validate-ha.yml  baremetal-undercloud.yml  baremetal-virt-undercloud-tripleo.yml  build-images-v2.yml  build-test-packages.yml  cleanup-destructive.yml  collect-logs.yml  content-provider-containers.yml  deploy-delete.yml  deploy-standalone-compute.yml  gate-quickstart.yml  multinode-minion.yml  multinode-multiple-overcloud.yml  multinode-overcloud-mixed-os-deploy-compute.yml  multinode-overcloud-mixed-os-deploy-control.yml  multinode-overcloud-mixed-os-deploy.yml  multinode-overcloud-mixed-os-repos-compute.yml  multinode-overcloud-prep.yml  multinode-overcloud-update.yml  multinode-overcloud-upgrade-new.yml  multinode-overcloud-upgrade.yml  multinode-overcloud.yml  multinode-standalone-ipa.yml  multinode-standalone-pre.yml  multinode-standalone-repoclosure.yml  multinode-standalone-upgrade.yml  multinode-standalone.yml  multinode-undercloud-minion.yml  multinode-undercloud-mixed-os.yml  multinode-undercloud-upgrade.yml  multinode-undercloud.yml  (+30 more)
samples/: collect_logs.yaml
tasks/: add-disk-size-hint.yml  adjust-mtu-dnsmasq-ironic.yml  allow-traffic-for-controller.yml  build.yml  collect.yml  create-docs.yml  create-scripts.yml  delete-original-node.yml  deploy-overcloud.yml  dlrn-build.yml  dlrn.yml  machine-provisioning.yml  machine-setup.yml  main.yml  overcloud-images.yml  overcloud-prep-images.yml  overcloud-prep-network.yml  post-deploy.yml  post-tempest.yml  pre-deploy.yml  pre-overcloud.yml  pre-scale.yml  pre-tempest.yml  pre-undercloud.yml  pre-upgrade.yml  publish.yml  roles-clone.yml  roles.yml  run-tempest.yml  set-repo.yml  setup-heat-templates.yml  undercloud-install.yml  undercloud-pre-install.yml  undercloud-scripts.yml  upgrade-overcloud.yml  upgrade-undercloud.yml
templates/: add-disk-size-hint.sh.j2  add-provisioning-interface.sh.j2  adjust-interface-mtus.sh.j2  allow-traffic-for-controller.sh.j2  ceph-default.yaml.j2  configure-tempest.sh.j2  delete-node.j2  delorean-repo.sh.j2  environment.j2  full_logs.html.j2  index.rst.j2  major-upgrade-overcloud.sh.j2  master_skip_file.j2  minor-upgrade-overcloud.sh.j2  overcloud-create-ssl-cert.sh.j2  overcloud-deploy.sh.j2  overcloud-images.sh.j2  overcloud-prep-flavors.sh.j2  overcloud-prep-images.sh.j2  overcloud-prep-network.sh.j2  overcloud-repo.yaml.j2  overcloud-test-ha.sh.j2  overcloud-test-instance.sh.j2  overcloud-validate.sh.j2  pre-upgrade-overcloud.sh.j2  run-tempest.sh.j2  scale-deployment.j2  tempest-setup.j2  tenantvm_floatingip.yaml.j2  undercloud-pre-install.sh.j2  undercloud-prep-images.sh.j2  undercloud-repos-conf.sh.j2  update-heat-stack.yaml.j2  upgrade-controller-liberty.sh.j2  upgrade-overcloud.sh.j2  (+3 more)
(+631 files in other folders)
