[metadata]
name = ansible-role-tripleo-ssl
summary = ansible-role-tripleo-ssl - A ansible role for deploying a tripleo overcloud
description-file =
    README.md
author = RDO-CI Team
author-email = apetrich@redhat.com mbultel@redhat.com, whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-ssl
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/tripleo-ssl/library = library/*
    usr/local/share/ansible/roles/tripleo-ssl/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-ssl/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-ssl/meta = meta/*
    usr/local/share/ansible/roles/tripleo-ssl/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-ssl/templates = templates/*
    usr/local/share/ansible/roles/tripleo-ssl/files = files/*
    usr/local/share/ansible/roles/tripleo-ssl/tests = tests/*
    usr/local/share/ansible/roles/tripleo-ssl/vars = vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
