[metadata]
name = tripleo-quickstart-extras
summary = Extend tripleo-quickstart's abilities to deploy and test TripleO
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://docs.openstack.org/developer/tripleo-quickstart/
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config = config/*
    playbooks = playbooks/*
    vars = vars/*
    usr/local/share/ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[flake8]
# E123, E125 skipped as they are invalid PEP-8.
# E402 module level import not at top of file
# E501 line too long
# F403 'from ansible.module_utils.basic import *' used; unable to detect undefined names
# H303 No wildcard (*) import
# H301  one import per line
# F405 ... may be undefined, or defined from star imports:
show-source = True
ignore = E123,E125,E402,E501,F403,H303,H301,F405
builtins = _
